# QCatGrayWidgets

./: .gitmodules  CMakeLists.txt  README.md  generate-linux-qt-export.sh
cmake/: QtConfig.cmake
examples/qcustomplotwidget/: CMakeLists.txt  CatQcustomplotTools.cpp  CatQcustomplotTools.ui  main.cpp
examples/qcustomplotwidget/QcustomplotCharts/: CatBarChart.cpp  CatLineChart.cpp  CatLineChart.ui
examples/qcustomplotwidget/resources/: resources.qrc
examples/qcustomplotwidget/resources/qss/CatGray/: CatBarChart.css
examples/qrencodeqml/: CMakeLists.txt  main.cpp  main.qml
examples/qrencodewidget/: CMakeLists.txt  main.cpp  qrencodewidget.cpp  qrencodewidget.h  qrencodewidget.ui  qrencodewidget_ui.py
examples/screenshotstools/: CMakeLists.txt  main.cpp
src/QCatGrayGraphicsDrawingBoard/: CMakeLists.txt  QCatGrayGraphicsDrawingBoardObject.cpp  QCatGrayGraphicsDrawingBoardObject.h  QCatGrayGraphicsDrawingBoardScene.cpp  QCatGrayGraphicsDrawingBoardScene.h  QCatGrayGraphicsDrawingBoardView.cpp  QCatGrayGraphicsDrawingBoardView.h
src/QCatGrayGraphicsDrawingBoard/QCatGrayDrawingBoardTools/: CMakeLists.txt  QCatGrayBrushArcBufferItem.cpp  QCatGrayBrushArcBufferItem.h  QCatGrayBrushObject.h  QCatGrayBrushPixBufferItem.cpp  QCatGrayBrushPixBufferItem.h  QCatGrayBrushPixItem.cpp  QCatGrayBrushPixItem.h
src/QCatGrayGraphicsDrawingBoard/QCatGrayTeachingTools/: CMakeLists.txt  CatMath.h  QCatGrayAbsTeachingTool.h  QCatGrayTeachingToolCompass.cpp  QCatGrayTeachingToolCompass.h  QCatGrayTeachingToolProtractor.cpp  QCatGrayTeachingToolProtractor.h  QCatGrayTeachingToolRuler.cpp  QCatGrayTeachingToolRuler.h  QCatGrayTeachingToolTrangle.cpp  QCatGrayTeachingToolTrangle.h
src/QCatGrayGraphicsDrawingBoard/QCatGrayTeachingTools/resources/: QCatGrayTeachingTools.qrc
src/QCatGrayQcustomplot/: CMakeLists.txt  QCatGrayQcustomplot.cpp  QCatGrayQcustomplot.h  QCatGrayQcustomplotAxisTag.cpp  QCatGrayQcustomplotAxisTag.h  QCatGrayQcustomplotBars.cpp  QCatGrayQcustomplotBars.h  QCatGrayQcustomplotCustomChart.cpp  QCatGrayQcustomplotCustomChart.h
src/QCatGrayQcustomplot/reources/doc/: Qcustomplot(类图)_1.md
src/QCatGrayQrenCode/: CMakeLists.txt  QCatGrayQrenCode.cpp  QCatGrayQrenCode.h  QCatGrayQuickQrenCodeParentItem.cpp  QCatGrayQuickQrenCodeParentItem.h
src/QCatGrayQuickWidget/: CMakeLists.txt  QCatGrayQuickWidget.cpp  QCatGrayQuickWidget.h
src/QCatGrayScreenShotsTools/: CMakeLists.txt  QCatGrayScreenShotsTools.cpp  QCatGrayScreenShotsTools.h
src/QCatGrayScreenShotsTools/QCatGrayScreenShots/: CMakeLists.txt  QCatGrayScreenShot.cpp  QCatGrayScreenShot.h  QCatGrayScreenShotBase.cpp  QCatGrayScreenShotBase.h
src/QCatGrayScreenShotsTools/private/: QCatGrayScreenShotsToolBackdrop.cpp  QCatGrayScreenShotsToolBackdrop.h  QCatGrayScreenShotsToolFilterbox.cpp  QCatGrayScreenShotsToolFilterbox.h  QCatGrayScreenShotsToolMasklayer.cpp  QCatGrayScreenShotsToolMasklayer.h  QCatGrayScreenShotsToolScene.cpp  QCatGrayScreenShotsToolScene.h  QCatGrayScreenShotsToolView.cpp  QCatGrayScreenShotsToolView.h
src/QCatGrayWidgetControls/: CMakeLists.txt  QCatGrayCarouselImageWidget.cpp  QCatGrayCarouselImageWidget.h  QCatGrayCatDoubleValidator.cpp  QCatGrayCatDoubleValidator.h  QCatGrayDoubleSlider.cpp  QCatGrayDoubleSlider.h  QCatGrayFlowLayout.cpp  QCatGrayFlowLayout.h  QCatGrayIntValidator.cpp  QCatGrayIntValidator.h  QCatGrayListingOptions.cpp  QCatGrayListingOptions.h  QCatGrayPagingNavigation.cpp  QCatGrayPagingNavigation.h  QCatGrayShadowWidget.cpp  QCatGrayShadowWidget.h  QCatGrayTableViewBasics.cpp  QCatGrayTableViewBasics.h  QCatGrayToolTip.cpp  QCatGrayToolTip.h
src/QCatGrayWidgetControls/resources/: QCatGrayWidgetControls.qrc
